# gtg-agent

./: .gitignore  AGENTS.md  Agent.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  api.py  config.env.example  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.omo/plans/: INDEX.md  download-optimization.md  mcp-optimization.md  mcp-tool-integration.md  skills-system.md  web-ui.md
.sisyphus/mcp/: mcp.db
.sisyphus/plans/: INDEX.md  agent-intelligence-upgrade.md  download-optimization.md  mcp-tool-integration.md  skills-system.md  web-ui.md
.sisyphus/skills/test-echo/: SKILL.md
.sisyphus/workflows/: branch-management.md
docs/: agent-pipeline-architecture.md  agent-web-ui-design.md  deployment-alternatives.md  deployment.md  llm-compatibility-layer.md  mcp-skills-upgrade-design.md  mcp-system.md  sandbox-abstraction.md  skills-system.md  web-ui-implementation-plan.md
docs/design/: agent-web-ui-design.md  llm-tool-skill-selection.md  mcp-optimization-plan.md  mcp-skills-upgrade-design.md
src/: config.py  llm.py
src/agent/: graph.py  nodes.py  state.py
src/mcp/: __init__.py  adapter.py  client.py  db.py  router.py
src/sandbox/: backend.py  client.py
src/skills/: loader.py
static/: app.js  index.html  marked.min.js  mcp.html  mcp.js  style.css
test-reports/: web-ui-test-report.md
tests/: test_intent.py  test_mcp_db.py
