[project]
name = "gtg-agent"
version = "0.1.0"
description = "Local AI code-execution agent with LangGraph orchestration, OpenAI-compatible LLM, and Docker sandbox isolation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "zzqzhangze" },
]
keywords = [
    "ai-agent",
    "langgraph",
    "sandbox",
    "llm",
    "code-execution",
    "docker",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "deepagents>=0.6.4",
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "opensandbox>=0.1.9",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]

[project.urls]
Homepage = "https://github.com/zzqzhangze/gtg-agent"
Repository = "https://github.com/zzqzhangze/gtg-agent"
